# elementary-redshift

./: AUTHORS  CMakeLists.txt  README.md  config.vala.cmake
cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
cmake/schemas/: Makefile  cmake_install.cmake
cmake/src/: Indicator.c  Makefile  Plug.c  cmake_install.cmake  config.c  config.vala  elementary-redshift-daemon
cmake/src/Daemon/: RedshiftDaemon.c
cmake/src/Services/: Settings.c
cmake/src/Widgets/: General.c  InformationGrid.c  Schedule.c  SettingLabel.c  Temperature.c
data/: CMakeLists.txt  com.github.sgpthomas.elementary-redshift-daemon.desktop  com.github.sgpthomas.elementary-redshift.appdata.xml  redshift-daemon.desktop  redshift-daemon.desktop.in
debian/: changelog  control  files
schemas/: CMakeLists.txt  com.github.sgpthomas.elementary-redshift.gschema.xml  org.pantheon.redshift.gschema.xml
src/: CMakeLists.txt  Indicator.vala  Plug.vala
src/Daemon/: Child.vala  RedshiftDaemon.vala
src/Services/: Child.vala  RedshiftController.vala  Settings.vala
src/Widgets/: General.vala  InformationGrid.vala  Schedule.vala  SettingLabel.vala  Temperature.vala
